z-index:999999 for the activity indicator. I hate doing that, but should fix a lot of theme incompatibilities.
git-svn-id: https://plugins.svn.wordpress.org/daves-wordpress-live-search/trunk@376472 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/daves-wordpress-live-search_default_blue.css
+++ b/css/daves-wordpress-live-search_default_blue.css
@@ -108,3 +108,7 @@ font-size: .9em;
 color: #fff;	
 margin-right: 1em;
 }
+
+#search_results_activity_indicator{
+z-index:999999;
+}
