--- a/css/daves-wordpress-live-search_default_gray.css
+++ b/css/daves-wordpress-live-search_default_gray.css
@@ -110,3 +110,7 @@ font-size: .9em;
 color: #fff;	
 margin-right: 1em;
 }
+
+#search_results_activity_indicator{
+z-index:999999;
+}
